force-app/main/default/objects/Account/fields/Account_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Member__c</fullName>
    <formula>$User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Team Member</label>
    <type>Text</type>
</CustomField>