force-app/main/default/objects/Account/fields/IPM_Referrer__c.field-meta.xml
<CustomField>
    <fullName>IPM_Referrer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPM Referrer</label>
    <type>Checkbox</type>
</CustomField>