force-app/main/default/objects/Account/fields/Junket_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Junket_Group_Name__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Junket Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>