force-app/main/default/objects/Account/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <formula>Account_Team_Member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member TEST</label>
    <type>Text</type>
</CustomField>