force-app/main/default/objects/Account/listViews/My_Team_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Team_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Team</filterScope>
    <label>My Team Accounts</label>
</ListView>